# angel-trading-mobile

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  package-lock.json  package.json  pnpm-lock.yaml
assets/: tailwind.css
src/: auth.rs  main.rs
src/components/: form.rs  hero.rs  mod.rs  navbar.rs
src/views/: dashboard.rs  login.rs  mod.rs
