[package]
name = "angel_trading"
version = "0.1.0"
authors = ["pkrawat1 <pankajrawat19sept@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-logger = "0.6.0"
lru = "0.16.0"
reqwest = { version = "0.12.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.141"
tracing = "0.1.41"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "History",
    "UrlSearchParams",
    "Storage",
] }
wasm-bindgen = "0.2"
daisy_rsx = "0.1"

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
